# 04_employment_by_exposure

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  code_test.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: daioe_meta.csv  daioe_simple_v1.csv  daioe_weighted.csv
data/03_daioe_aggregated/: daioe_ssyk2012_emp_weighted.csv  daioe_ssyk2012_simple_avg.csv  daioe_ssyk96_emp_weighted.csv  daioe_ssyk96_simple_avg.csv
scripts/: 04_occ.py
src/: __init__.py  config.py  data_manager.py  digit4_aggregate.py  digit4_fetch.py  main.py  pipeline.py  plotting.py  scb_fetch.py
